impl check keyword

--- a/config.toml.example
+++ b/config.toml.example
@@ -14,8 +14,7 @@ passphrase = [ "add me" ]
 path = "./logs/"
 
 [keyword]
-fake_offline_message = "offline message"
-fake_group = "mobile"
-no_avatar = "no avatar"
-no_invite = "no invite"
-
+open_offline_message = "offline message"
+open_group = "mobile"
+off_avatar = "off avatar"
+off_invite = "off invite"
